# CSC2025

./: Coursework.java  README.md
2026/: RFTclient  RFTclient.c  RFTheader.h  RFTserver  RFTserver.c  output.txt
csc2025/: comGuess  comGuess.c  core.1244  core.1248  exchange  exchange.c  factorial  factorial.c  getChar  getChar.c  guess  guess.c  hello  hello.c  tester  tester.c  writeFile  writefile.c
csc2025/csc2025-assignment1-dist/__MACOSX/csc2025-assignment1-dist/: ._Makefile  ._integer.h
csc2025/csc2025-assignment1-dist/csc2025-assignment1-dist/: CMakeLists.txt  Makefile  README-test-output.txt  README.txt  core.1028  core.1032  core.1033  core.1064  core.1079  core.1095  core.1110  core.1126  core.1141  core.1157  core.1172  core.1188  core.1203  core.1219  core.1234  core.1250  core.1281  core.1295  core.1312  core.1326  core.1343  core.1357  core.1374  core.1388  core.1419  core.1436  core.1450  core.1467  core.1481  core.1498  core.1532  core.1563  core.1594  core.1625  core.1656  core.1707  (+80 more)
csc2025/csc2025-assignment1-dist/csc2025-assignment1-dist/test_src/: integer_app.c  string_app.c  strtest_lib.c  strtest_lib.h  test_integer.c  test_lib.c  test_lib.h  test_obj_store.c  test_string.c
